[package]
name = "endl-rc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.32.0", features=["full"]}
crossterm = "0.26.1"
ratatui = "0.22.0"
tui-input = "*"
cli-clipboard = "0.4.0"
